some refactoring + added unit tests