@@ -24,6 +24,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						@{argLine} --add-exports fr.cril.rubens.checker/fr.cril.rubens.checker.utils=fr.cril.rubens.core
+					</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
